# crafting-interpreter

./: README.md
clox/: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
clox/src/: AstPrinter.cpp  AstPrinter.hpp  Clox.cpp  Clox.h  Clox.hpp  Environment.cpp  Environment.hpp  Expr.hpp  ExprNodes.cpp  ExprNodes.hpp  ExprStruct.hpp  ExprVisitor.hpp  Interpreter.cpp  Interpreter.hpp  Parser.cpp  Parser.hpp  RuntimeError.hpp  Scanner.cpp  Scanner.h  Scanner.hpp  StmtStruct.hpp  Token.cpp  Token.h  Token.hpp  TokenType.h  TokenType.hpp
lox/: .gitignore  package-lock.json  package.json
lox/src/: lox.ts
lox/src/com/craftinginterpreters/lox/: AstPrinter.java  Environment.java  Interpreter.java  Lox.java  LoxFunction.java  LoxInstance.java  Parser.java  Resolver.java  Scanner.java
lox/src/com/craftinginterpreters/tool/: GenerateAst.java
tlox/: package.json  tsconfig.json
tlox/src/: tlox.ts
tlox/src/Classes/: Scanner.ts  Token.ts
tlox/src/Constants/: tokenType.ts
